fixed overflowing text

--- a/assets/styles/resource.css
+++ b/assets/styles/resource.css
@@ -1,5 +1,5 @@
 .page__header-draggable-title .page__header-gripper-label {
-  max-width: 45.5vw !important;
+  width: 100% !important;
   font-size: x-large !important;
 }
 
@@ -45,10 +45,8 @@
   }
 }
 
-
-@media(max-width:1200px){
+@media (max-width: 1200px) {
   .page__header-draggable-title .page__header-gripper-label {
-    max-width: 90vw !important;
     white-space: pre-wrap !important;
   }
 }
